# proj-03-ultimate-runtime

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INTEGRATION_REPORT.md  LICENSE  Makefile  README.md  ROADMAP.md  SESSION_COMPLETION_REPORT.md  STATUS_FINAL.txt  TODO.md  create_structure.py  create_structure.sh  test_build.py  validate_project.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  build.yml  docs.yml  fuzz.yml  release.yml  security.yml  tests.yml
42_common_core/born2beroot/: GUIDE.md
42_common_core/cpp_modules/: GUIDE.md
42_common_core/cub3d/: GUIDE.md
42_common_core/exam_rank/: GUIDE.md
42_common_core/fractol/: GUIDE.md
42_common_core/ft_irc/: GUIDE.md
42_common_core/ft_printf/: .gitignore  Makefile  README.md
42_common_core/ft_printf/include/: ft_printf.h
42_common_core/ft_printf/include/core/: ft_printf.h
42_common_core/ft_printf/src/conversions/: print_char.c  print_hex.c  print_int.c  print_percent.c  print_ptr.c  print_str.c  print_uint.c
42_common_core/ft_printf/src/core/: dispatcher.c  ft_printf.c
42_common_core/ft_printf/src/parsing/: parse_flags.c  parse_format.c  parse_precision.c  parse_specifier.c  parse_width.c
42_common_core/ft_printf/tests/: test_ftprintf.c
42_common_core/get_next_line/: GUIDE.md
42_common_core/inception/: GUIDE.md
42_common_core/libft/: .gitignore  Makefile  README.md
42_common_core/libft/Dev/notas/: 03-melhorias.md  04-fase3-libft_api_manual.md
42_common_core/libft/include/: libft.h
42_common_core/libft/include/algo/: compare.h  hash.h  search.h  sort.h
42_common_core/libft/include/core/: compiler.h  config.h  ctype.h  defs.h  errno.h  macros.h  stdlib-ft.h  types.h
42_common_core/libft/include/ds/: dlist.h  list.h  queue.h  slist.h  stack.h  vector.h
42_common_core/libft/include/internal/: debug.h  internal.h  platform.h
42_common_core/libft/include/io/: file.h
42_common_core/libft/include/memory/: alloc.h  arena.h  buffer.h  memory.h  pool.h
42_common_core/libft/include/string/: string.h  string_builder.h  string_view.h
42_common_core/libft/make/: rules.mk
42_common_core/miniRT/: GUIDE.md
42_common_core/minishell/: GUIDE.md
42_common_core/minitalk/: GUIDE.md
42_common_core/netpractice/: GUIDE.md
42_common_core/philosophers/: GUIDE.md
42_common_core/pipex/: GUIDE.md
42_common_core/push_swap/: GUIDE.md
42_common_core/so_long/: GUIDE.md
42_common_core/transcendence/: GUIDE.md
42_common_core/webserv/: GUIDE.md
build_system/cmake/: compiler_flags.cmake  dependencies.cmake  packaging.cmake  profiling.cmake  sanitizers.cmake  testing.cmake  warnings.cmake
build_system/toolchains/: linux-clang.cmake  linux-gcc.cmake  macos-clang.cmake  wasm.cmake  windows-msvc.cmake
docs/conventions/: documentation.md  error_handling.md  memory.md  naming.md  ownership.md  performance.md  structure.md  style_guide.md  testing.md  threading.md
runtime/libds/: API.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md  TODO.md
runtime/libds/include/public/libds/: arena_allocator.h  avl.h  bitset.h  bloom_filter.h  bst.h  btree.h  circular_list.h  deque.h  doubly_linked_list.h  graph.h  hashmap.h  hashset.h  heap.h  interval_tree.h  kd_tree.h  linked_list.h  lru_cache.h  memory_pool.h  priority_queue.h  queue.h  radix_tree.h  red_black_tree.h  ring_buffer.h  rope.h  skiplist.h  slab_allocator.h  stack.h  string_builder.h  trie.h  union_find.h  vector.h
runtime/libft/: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md
runtime/libft/Dev/backups/: stdio.h.backup  stdlib.h.backup  unistd.h.backup
runtime/libft/Dev/notas/: 01-updateMakefile.md  02-utils_analize.md
runtime/libft/include/: ctype.h  libft.h  memory.h  string.h
runtime/libft/include/ds/: dlist.h  list.h  queue.h  slist.h  stack.h  vector.h
runtime/libft/include/io/: stdio.h
runtime/libft/include/memory/: alloc.h
runtime/libft/include/public/libft/: ctype.h  libft.h  math.h  memory.h  stdio.h  stdlib.h  time.h
runtime/libft/make/: config.mk  sources.mk  tests.mk
runtime/libft/src/: _empty.c
runtime/libft/src/ctype/: is_alnum.c  is_alpha.c  is_ascii.c  is_blank.c  is_cntrl.c  is_digit.c  is_graph.c  is_lower.c  is_print.c  is_punct.c  is_space.c  is_upper.c  is_xdigit.c  to_lower.c
runtime/libft/src/ds/: dlist.c  list.c  queue.c  stack.c  vector.c
runtime/libft/src/memory/: memcpy.c  memset.c
runtime/libft/src/stdio/: printf.c  putchar.c  putchar_fd.c  puts.c  sprintf.c
runtime/libft/src/stdlib/: atol.c  calloc.c  exit.c  free.c  getenv.c  itoa.c  realloc.c
runtime/libft/src/string/: strcat.c  strchar.c  strcmp.c  strcpy.c  strcpy_v2.c  strdup.c  striteri.c  strjoin.c  strlcat.c  strlcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strndup.c  strrchar.c  strsplit.c  strstr.c  strtok.c
runtime/libft/tests/: CMakeLists.txt
runtime/libft/tests/ctype/: test_isalnum.c  test_isalpha.c  test_isascii.c  test_isblank.c  test_iscntrl.c  test_isdigit.c  test_isgraph.c  test_islower.c  test_isprint.c  test_ispunct.c  test_isspace.c  test_isupper.c  test_isxdigit.c
runtime/libft/tests/memory/: test_bzero.c  test_memccpy.c  test_memchr.c  test_memcmp.c  test_memcpy.c
runtime/libft/tests/stdio/: test_putendlfd.c  test_putnbrfd.c
runtime/libft/tests/stdlib/: test_atoi.c  test_calloc.c  test_itoa.c
runtime/libft/tests/string/: test_strcat.c  test_strchar.c  test_strcmp.c  test_strcpy.c  test_strdup.c  test_strjoin.c  test_strlen.c  test_strmapi.c  test_strncat.c  test_strncmp.c  test_strncpy.c  test_strndup.c  test_strrchar.c  test_strstr.c  test_strtok.c
runtime/libft_backup/: API.md  CMakeLists.txt  README.md  TODO.md
runtime/libft_backup/include/public/libft/: errno.h  string.h  unistd.h
scripts/generators/: generate_42_project.py  generate_application.py  generate_library.py  generate_module.py  generate_networking.py  generate_parser.py  generate_runtime.py  generate_workspace.py
(+86 files in other folders)
